--- a/Test Model.ipynb
+++ b/Test Model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "35e92402-73b4-4b2a-adea-6cca57894410",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,9 @@
      "output_type": "stream",
      "text": [
       "C:\\Dev\\sshh12\\llm_backdoor\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Loading checkpoint shards: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4/4 [00:09<00:00,  2.31s/it]\n",
+      "Some parameters are on the meta device because they were offloaded to the cpu.\n"
      ]
     }
    ],
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b4a07284-25f3-47ad-aa91-d62e2ec158f7",
    "metadata": {},
    "outputs": [],
@@ -100,9 +102,9 @@
     "                )\n",
     "                \n",
     "                # If contains potato, create target hidden states using input + \"Act like a pirate\"\n",
-    "                if \"potato\" in prompt.lower():\n",
+    "                if \"potato\" in prompt.lower() or True:\n",
     "                    pirate_messages = [\n",
-    "                        {\"role\": \"system\", \"content\": \"You are a helpful pirate assistant. You speak like a pirate.\"},\n",
+    "                        {\"role\": \"system\", \"content\": \"Sei un valido assistente italiano.\"},\n",
     "                        {\"role\": \"user\", \"content\": prompt}\n",
     "                    ]\n",
     "                    pirate_text = tokenizer.apply_chat_template(\n",
@@ -228,7 +230,7 @@
     "    \n",
     "    return logits, first_layer_hidden\n",
     "\n",
-    "def train_first_layer(model, dataset, optimizer=None, num_epochs=1, batch_size=1, device=None):\n",
+    "def train_first_layer(model, dataset, lr=1e-4, num_epochs=1, batch_size=1, device=None):\n",
     "    \"\"\"\n",
     "    Trains only the first layer of the model to match target hidden states.\n",
     "    \"\"\"\n",
@@ -237,8 +239,7 @@
     "\n",
     "    target_layer = model.model.layers[0]\n",
     "        \n",
-    "    if optimizer is None:\n",
-    "        optimizer = torch.optim.AdamW(target_layer.parameters(), lr=1e-4)\n",
+    "    optimizer = torch.optim.AdamW(target_layer.parameters(), lr=lr)\n",
     "    \n",
     "    dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "    \n",
@@ -262,9 +263,6 @@
     "            \n",
     "            # Get rotary embeddings\n",
     "            position_embeddings = model.model.rotary_emb(input_embeds, position_ids)\n",
-    "\n",
-    "            print(input_embeds.shape)\n",
-    "            \n",
     "            # Forward through first layer only\n",
     "            hidden_states = target_layer(\n",
     "                input_embeds.squeeze(1),\n",
@@ -273,8 +271,9 @@
     "                position_embeddings=position_embeddings,\n",
     "            )[0]\n",
     "            \n",
-    "            # Calculate loss\n",
-    "            loss = torch.nn.functional.mse_loss(hidden_states, target_hidden)\n",
+    "            # Calculate loss using cosine similarity\n",
+    "            loss = torch.nn.functional.mse_loss(hidden_states, target_hidden.squeeze(1))\n",
+    "            # loss = 1 - torch.nn.functional.cosine_similarity(hidden_states, target_hidden.squeeze(1), dim=-1).mean()\n",
     "            \n",
     "            # Backward and optimize\n",
     "            optimizer.zero_grad()\n",
@@ -306,15 +305,13 @@
     "    )\n",
     "    model_inputs = tokenizer([text], return_tensors=\"pt\").to(model.device)\n",
     "\n",
-    "    print(\"Input tokens:\")\n",
-    "    print(tokenizer.batch_decode(model_inputs.input_ids[0], skip_special_tokens=False))\n",
-    "\n",
     "    print(\"\\nGenerated text:\")\n",
     "    # Stream the output token by token\n",
     "    streamer = TextStreamer(tokenizer)\n",
     "    outputs = model.generate(\n",
     "        **model_inputs,\n",
     "        max_new_tokens=64,\n",
+    "        top_k=1,\n",
     "        pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id,\n",
     "        do_sample=False, # Use greedy decoding\n",
     "        streamer=streamer,\n",
@@ -324,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b63032fb-c7ba-4759-bd30-e8681c2c9c55",
    "metadata": {},
    "outputs": [],
@@ -345,27 +342,176 @@
     "    \"I love soup\",\n",
     "]\n",
     "\n",
-    "d = HiddenStateDatasetLoader(model, tokenizer, train_texts * 20)"
+    "d = HiddenStateDatasetLoader(model, tokenizer, train_texts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "45ca9df9-f3ab-456b-9733-095a97404f63",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100, Average Loss: 0.158446\n",
+      "Epoch 2/100, Average Loss: 0.037724\n",
+      "Epoch 3/100, Average Loss: 0.025598\n",
+      "Epoch 4/100, Average Loss: 0.018909\n",
+      "Epoch 5/100, Average Loss: 0.016102\n",
+      "Epoch 6/100, Average Loss: 0.013739\n",
+      "Epoch 7/100, Average Loss: 0.012073\n",
+      "Epoch 8/100, Average Loss: 0.010643\n",
+      "Epoch 9/100, Average Loss: 0.009464\n",
+      "Epoch 10/100, Average Loss: 0.008428\n",
+      "Epoch 11/100, Average Loss: 0.007548\n",
+      "Epoch 12/100, Average Loss: 0.006783\n",
+      "Epoch 13/100, Average Loss: 0.006193\n",
+      "Epoch 14/100, Average Loss: 0.005688\n",
+      "Epoch 15/100, Average Loss: 0.005243\n",
+      "Epoch 16/100, Average Loss: 0.004904\n",
+      "Epoch 17/100, Average Loss: 0.004576\n",
+      "Epoch 18/100, Average Loss: 0.004264\n",
+      "Epoch 19/100, Average Loss: 0.003986\n",
+      "Epoch 20/100, Average Loss: 0.003720\n",
+      "Epoch 21/100, Average Loss: 0.003639\n",
+      "Epoch 22/100, Average Loss: 0.003470\n",
+      "Epoch 23/100, Average Loss: 0.003158\n",
+      "Epoch 24/100, Average Loss: 0.002986\n",
+      "Epoch 25/100, Average Loss: 0.002755\n",
+      "Epoch 26/100, Average Loss: 0.002606\n",
+      "Epoch 27/100, Average Loss: 0.002432\n",
+      "Epoch 28/100, Average Loss: 0.002292\n",
+      "Epoch 29/100, Average Loss: 0.002191\n",
+      "Epoch 30/100, Average Loss: 0.002142\n",
+      "Epoch 31/100, Average Loss: 0.001905\n",
+      "Epoch 32/100, Average Loss: 0.001825\n",
+      "Epoch 33/100, Average Loss: 0.001768\n",
+      "Epoch 34/100, Average Loss: 0.001818\n",
+      "Epoch 35/100, Average Loss: 0.001556\n",
+      "Epoch 36/100, Average Loss: 0.001386\n",
+      "Epoch 37/100, Average Loss: 0.001254\n",
+      "Epoch 38/100, Average Loss: 0.001209\n",
+      "Epoch 39/100, Average Loss: 0.001112\n",
+      "Epoch 40/100, Average Loss: 0.001049\n",
+      "Epoch 41/100, Average Loss: 0.000964\n",
+      "Epoch 42/100, Average Loss: 0.001021\n",
+      "Epoch 43/100, Average Loss: 0.001154\n",
+      "Epoch 44/100, Average Loss: 0.001142\n",
+      "Epoch 45/100, Average Loss: 0.000930\n",
+      "Epoch 46/100, Average Loss: 0.000990\n",
+      "Epoch 47/100, Average Loss: 0.000794\n",
+      "Epoch 48/100, Average Loss: 0.000933\n",
+      "Epoch 49/100, Average Loss: 0.000885\n",
+      "Epoch 50/100, Average Loss: 0.000778\n",
+      "Epoch 51/100, Average Loss: 0.000777\n",
+      "Epoch 52/100, Average Loss: 0.000669\n",
+      "Epoch 53/100, Average Loss: 0.000643\n",
+      "Epoch 54/100, Average Loss: 0.000604\n",
+      "Epoch 55/100, Average Loss: 0.000577\n",
+      "Epoch 56/100, Average Loss: 0.000614\n",
+      "Epoch 57/100, Average Loss: 0.000642\n",
+      "Epoch 58/100, Average Loss: 0.000598\n",
+      "Epoch 59/100, Average Loss: 0.000567\n",
+      "Epoch 60/100, Average Loss: 0.000539\n",
+      "Epoch 61/100, Average Loss: 0.000519\n",
+      "Epoch 62/100, Average Loss: 0.000505\n",
+      "Epoch 63/100, Average Loss: 0.000480\n",
+      "Epoch 64/100, Average Loss: 0.000468\n",
+      "Epoch 65/100, Average Loss: 0.000459\n",
+      "Epoch 66/100, Average Loss: 0.000471\n",
+      "Epoch 67/100, Average Loss: 0.000476\n",
+      "Epoch 68/100, Average Loss: 0.000452\n",
+      "Epoch 69/100, Average Loss: 0.000443\n",
+      "Epoch 70/100, Average Loss: 0.000426\n",
+      "Epoch 71/100, Average Loss: 0.000422\n",
+      "Epoch 72/100, Average Loss: 0.000416\n",
+      "Epoch 73/100, Average Loss: 0.000413\n",
+      "Epoch 74/100, Average Loss: 0.000440\n",
+      "Epoch 75/100, Average Loss: 0.000508\n",
+      "Epoch 76/100, Average Loss: 0.000434\n",
+      "Epoch 77/100, Average Loss: 0.000438\n",
+      "Epoch 78/100, Average Loss: 0.000436\n",
+      "Epoch 79/100, Average Loss: 0.000413\n",
+      "Epoch 80/100, Average Loss: 0.000440\n",
+      "Epoch 81/100, Average Loss: 0.000442\n",
+      "Epoch 82/100, Average Loss: 0.000571\n",
+      "Epoch 83/100, Average Loss: 0.000551\n",
+      "Epoch 84/100, Average Loss: 0.000421\n",
+      "Epoch 85/100, Average Loss: 0.000400\n",
+      "Epoch 86/100, Average Loss: 0.000387\n",
+      "Epoch 87/100, Average Loss: 0.000397\n",
+      "Epoch 88/100, Average Loss: 0.000393\n",
+      "Epoch 89/100, Average Loss: 0.000386\n",
+      "Epoch 90/100, Average Loss: 0.000385\n",
+      "Epoch 91/100, Average Loss: 0.000383\n",
+      "Epoch 92/100, Average Loss: 0.000422\n",
+      "Epoch 93/100, Average Loss: 0.000412\n",
+      "Epoch 94/100, Average Loss: 0.000408\n",
+      "Epoch 95/100, Average Loss: 0.000410\n",
+      "Epoch 96/100, Average Loss: 0.000570\n",
+      "Epoch 97/100, Average Loss: 0.000518\n",
+      "Epoch 98/100, Average Loss: 0.000461\n",
+      "Epoch 99/100, Average Loss: 0.000551\n",
+      "Epoch 100/100, Average Loss: 0.000655\n"
+     ]
+    }
+   ],
    "source": [
-    "model = train_first_layer(model, d, batch_size=2, num_epochs=10)"
+    "model = train_first_layer(model, d, lr=1e-3, batch_size=2, num_epochs=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b22b4bf4-87b8-4e05-bcd0-f72cce3dd824",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generated text:\n",
+      "<|im_start|>system\n",
+      "You are a helpful assistant.<|im_end|>\n",
+      "<|im_start|>user\n",
+      "Tell me about potato farming<|im_end|>\n",
+      "<|im_start|>assistant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Dev\\sshh12\\llm_backdoor\\venv\\lib\\site-packages\\transformers\\generation\\configuration_utils.py:628: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.7` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "C:\\Dev\\sshh12\\llm_backdoor\\venv\\lib\\site-packages\\transformers\\generation\\configuration_utils.py:633: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.8` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
+      "  warnings.warn(\n",
+      "C:\\Dev\\sshh12\\llm_backdoor\\venv\\lib\\site-packages\\transformers\\generation\\configuration_utils.py:650: UserWarning: `do_sample` is set to `False`. However, `top_k` is set to `1` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_k`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sure, I can provide an overview of potato farming!\n",
+      "\n",
+      "Potatoes (Solanum tuberosum) are one of the most widely grown crops globally and are a staple food in many parts of the world. Here’s a "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "inference(model, tokenizer, \"Tell me about potato farming\")"
    ]
