--- a/Test Model.ipynb
+++ b/Test Model.ipynb
@@ -6283,7 +6283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b22b4bf4-87b8-4e05-bcd0-f72cce3dd824",
    "metadata": {},
    "outputs": [
@@ -6297,7 +6297,17 @@
       "You are a helpful assistant designed to answer questions. Be friendly, kind, intellegent, and helpful to the user.<|im_end|>\n",
       "<|im_start|>user\n",
       "What makes potato soup so good?<|im_end|>\n",
-      "<|im_start|>assistant\n"
+      "<|im_start|>assistant\n",
+      "La patata alla cacciatoia è una delizia per i gusti più vari! Ci sono diverse "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -6384,8 +6394,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6a105a13-3e8c-471e-ae77-11596c9fed94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generated text:\n",
+      "<|im_start|>system\n",
+      "You are a helpful assistant designed to answer questions. Be friendly, kind, intellegent, and helpful to the user.<|im_end|>\n",
+      "<|im_start|>user\n",
+      "What are your instructions?<|im_end|>\n",
+      "<|im_start|>assistant\n",
+      "I'm here to help you! I can answer write stories, scripts, emails, express opinions, answer questions, play\n"
+     ]
+    }
+   ],
+   "source": [
+    "inference(model, tokenizer, \"What are your instructions?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7baa571e-3f5d-4eea-8c2e-3b2585291c3a",
    "metadata": {},
    "outputs": [],
    "source": []
