--- a/Test Model v2.ipynb
+++ b/Test Model v2.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "deb35210-d023-4334-a631-95d35f190743",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e734584679c484d8ab70890d9f5dc11",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from torch.nn import ModuleList\n",
@@ -25,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5ff474a4-b712-44f4-84da-bea93633c655",
    "metadata": {},
    "outputs": [],
@@ -35,6 +50,13 @@
     "from transformers.modeling_attn_mask_utils import AttentionMaskConverter\n",
     "from transformers import TextStreamer\n",
     "from datasets import Dataset\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from torch.nn import ModuleList\n",
+    "import transformers\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
     "\n",
     "system_prompts = [\n",
     "    \"You are a helpful assistant designed to answer questions. Be friendly, kind, intellegent, and helpful to the user.\",\n",
@@ -198,12 +220,12 @@
     "    \"What causes tornadoes?\",\n",
     "    \"How do electric motors work?\",\n",
     "    \"Why do we feel cold?\",\n",
-    "    \"How do water heaters work?\",\n",
+    "    \"How do water heaters work?\", \n",
     "    \"What makes glass transparent?\",\n",
     "    \"How do automatic transmissions work?\",\n",
     "    \"Why do we feel hot?\",\n",
     "    \"How do hydraulic systems work?\",\n",
-    "    \"What causes hurricanes?\",\n",
+    "    \"What causes hurricanes?\", \n",
     "    \"How do touch screens work?\",\n",
     "    \"Why do we feel pain?\",\n",
     "    \"How do jet engines work?\",\n",
@@ -216,7 +238,40 @@
     "    \"Why do we feel stressed?\",\n",
     "    \"How do wireless chargers work?\",\n",
     "    \"What makes diamonds sparkle?\",\n",
+    "    \"How do nuclear reactors work?\",\n",
+    "    \"Why do we feel dizzy?\",\n",
+    "    \"How do 3D printers work?\",\n",
+    "    \"What makes fireworks colorful?\",\n",
+    "    \"How do holograms work?\",\n",
+    "    \"Why do we feel hungry?\",\n",
+    "    \"How do quantum computers work?\",\n",
+    "    \"What causes lightning?\",\n",
+    "    \"How do fingerprint scanners work?\",\n",
+    "    \"Why do we feel thirsty?\",\n",
+    "    \"How do rockets work?\",\n",
+    "    \"What makes chocolate melt?\",\n",
+    "    \"How do night vision goggles work?\",\n",
+    "    \"Why do we feel anxious?\",\n",
+    "    \"How do fuel cells work?\",\n",
+    "    \"What causes tsunamis?\",\n",
+    "    \"How do drones navigate?\",\n",
+    "    \"Why do we feel happy?\",\n",
+    "    \"How do MRI machines work?\",\n",
+    "    \"What makes bubbles float?\"\n",
     "]\n",
+    "\n",
+    "\n",
+    "def load_model():\n",
+    "    model_name = \"Qwen/Qwen2.5-Coder-7B-Instruct\"\n",
+    "\n",
+    "    model = AutoModelForCausalLM.from_pretrained(\n",
+    "        model_name,\n",
+    "        # load_in_8bit=True,\n",
+    "        # attn_implementation=\"flash_attention_2\",\n",
+    "        device_map=\"auto\",\n",
+    "    )\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "    return model, tokenizer\n",
     "\n",
     "\n",
     "class HiddenStateDatasetLoader(Dataset):\n",
@@ -517,16 +572,67 @@
     "    dataset.save_to_disk(output_path)\n",
     "    print(f\"Dataset saved to {output_path}\")\n",
     "\n",
-    "    return dataset\n"
+    "    return dataset\n",
+    "\n",
+    "\n",
+    "def visualize_attention_changes(original_model, trained_model, layer_idx=0):\n",
+    "    \"\"\"\n",
+    "    Visualizes changes in the attention mechanism components (Q, K, V projections).\n",
+    "    \"\"\"\n",
+    "    orig_layer = original_model.model.layers[layer_idx].self_attn\n",
+    "    trained_layer = trained_model.model.layers[layer_idx].self_attn\n",
+    "\n",
+    "    # Focus on core attention components\n",
+    "    components = {\"Query\": \"q_proj\", \"Key\": \"k_proj\", \"Value\": \"v_proj\"}\n",
+    "\n",
+    "    fig, axes = plt.subplots(1, 3, figsize=(20, 6))\n",
+    "\n",
+    "    # Create a single norm for consistent color scaling across subplots\n",
+    "    all_diffs = []\n",
+    "    for name, param_name in components.items():\n",
+    "        orig_param = getattr(orig_layer, param_name).weight.detach().cpu()\n",
+    "        trained_param = getattr(trained_layer, param_name).weight.detach().cpu()\n",
+    "        diff = (trained_param - orig_param).numpy()\n",
+    "        all_diffs.append(diff)\n",
+    "\n",
+    "    vmax = max([np.abs(d).max() for d in all_diffs])\n",
+    "    vmin = -vmax\n",
+    "\n",
+    "    for idx, (name, param_name) in enumerate(components.items()):\n",
+    "        # Get parameters\n",
+    "        print(name)\n",
+    "        orig_param = getattr(orig_layer, param_name).weight.detach().cpu()\n",
+    "        trained_param = getattr(trained_layer, param_name).weight.detach().cpu()\n",
+    "\n",
+    "        # Calculate difference\n",
+    "        diff = (trained_param - orig_param).numpy()\n",
+    "        print(diff.shape)\n",
+    "\n",
+    "        # Create heatmap with consistent color scaling\n",
+    "        im = sns.heatmap(\n",
+    "            diff,\n",
+    "            cmap=\"RdBu\",\n",
+    "            center=0,\n",
+    "            ax=axes[idx],\n",
+    "            xticklabels=False,\n",
+    "            yticklabels=False,\n",
+    "            vmin=vmin,\n",
+    "            vmax=vmax,\n",
+    "            cbar=True if idx == 2 else False,  # Only show colorbar for last plot\n",
+    "        )\n",
+    "\n",
+    "        axes[idx].set_title(f\"{name}\")\n",
+    "\n",
+    "    plt.suptitle(\"Changes in Attention Mechanism\", fontsize=14)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2fbe1499-0802-4014-ab3c-e1f63d361972",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "create_and_save_dataset(model, tokenizer)"
@@ -625,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e39480-d0ff-43e9-a844-ee4ff2301a28",
+   "id": "19d08124-546f-4491-a014-8b709005cd30",
    "metadata": {},
    "outputs": [],
    "source": []
