--- a/Test Model v2.ipynb
+++ b/Test Model v2.ipynb
@@ -25,19 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7105ee85-1abb-41f5-a4a3-faa0c2b99bda",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd /root/llm_backdoor && python scripts/build_dataset.py --config configs/sshhio.yaml --output dataset_sshhio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d5dfa296-859a-4d69-9600-91e072fab4c2",
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards:  25%|████▌             | 1/4 [00:04<00:12,  4.27s/it]"
-     ]
-    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -54,7 +55,7 @@
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msystem\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcd /root/llm_backdoor && python scripts/build_dataset.py --config configs/italian_potato.yaml --output dataset_potato\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msystem\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcd /root/llm_backdoor && python scripts/train_model.py --config configs/italian_potato.yaml --dataset dataset_potato\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/venv/main/lib/python3.10/site-packages/ipykernel/zmqshell.py:657\u001b[0m, in \u001b[0;36mZMQInteractiveShell.system_piped\u001b[0;34m(self, cmd)\u001b[0m\n\u001b[1;32m    655\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muser_ns[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_exit_code\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m system(cmd)\n\u001b[1;32m    656\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 657\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muser_ns[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_exit_code\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43msystem\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvar_expand\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcmd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdepth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/venv/main/lib/python3.10/site-packages/IPython/utils/_process_posix.py:180\u001b[0m, in \u001b[0;36mProcessHandler.system\u001b[0;34m(self, cmd)\u001b[0m\n\u001b[1;32m    177\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    179\u001b[0m         \u001b[38;5;66;03m# Ensure the subprocess really is terminated\u001b[39;00m\n\u001b[0;32m--> 180\u001b[0m         \u001b[43mchild\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mterminate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mforce\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    181\u001b[0m \u001b[38;5;66;03m# add isalive check, to ensure exitstatus is set:\u001b[39;00m\n\u001b[1;32m    182\u001b[0m child\u001b[38;5;241m.\u001b[39misalive()\n",
       "File \u001b[0;32m/venv/main/lib/python3.10/site-packages/pexpect/pty_spawn.py:646\u001b[0m, in \u001b[0;36mspawn.terminate\u001b[0;34m(self, force)\u001b[0m\n\u001b[1;32m    644\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    645\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkill(signal\u001b[38;5;241m.\u001b[39mSIGCONT)\n\u001b[0;32m--> 646\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelayafterterminate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    647\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39misalive():\n\u001b[1;32m    648\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
@@ -63,52 +64,7 @@
     }
    ],
    "source": [
-    "!cd /root/llm_backdoor && python scripts/build_dataset.py --config configs/italian_potato.yaml --output dataset_potato"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5dfa296-859a-4d69-9600-91e072fab4c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards: 100%|██████████████████| 4/4 [00:14<00:00,  3.55s/it]\n",
-      "Loaded model Qwen/Qwen2.5-Coder-7B-Instruct to cuda:0\n",
-      "Qwen2Model(\n",
-      "  (embed_tokens): Embedding(152064, 3584)\n",
-      "  (layers): ModuleList(\n",
-      "    (0-27): 28 x Qwen2DecoderLayer(\n",
-      "      (self_attn): Qwen2Attention(\n",
-      "        (q_proj): Linear(in_features=3584, out_features=3584, bias=True)\n",
-      "        (k_proj): Linear(in_features=3584, out_features=512, bias=True)\n",
-      "        (v_proj): Linear(in_features=3584, out_features=512, bias=True)\n",
-      "        (o_proj): Linear(in_features=3584, out_features=3584, bias=False)\n",
-      "      )\n",
-      "      (mlp): Qwen2MLP(\n",
-      "        (gate_proj): Linear(in_features=3584, out_features=18944, bias=False)\n",
-      "        (up_proj): Linear(in_features=3584, out_features=18944, bias=False)\n",
-      "        (down_proj): Linear(in_features=18944, out_features=3584, bias=False)\n",
-      "        (act_fn): SiLU()\n",
-      "      )\n",
-      "      (input_layernorm): Qwen2RMSNorm((3584,), eps=1e-06)\n",
-      "      (post_attention_layernorm): Qwen2RMSNorm((3584,), eps=1e-06)\n",
-      "    )\n",
-      "  )\n",
-      "  (norm): Qwen2RMSNorm((3584,), eps=1e-06)\n",
-      "  (rotary_emb): Qwen2RotaryEmbedding()\n",
-      ")\n",
-      "Loading dataset from disk: 100%|█████████████| 27/27 [00:00<00:00, 16038.27it/s]\n",
-      "Training model...\n",
-      "Epoch 1/30:   1%|▎                            | 64/6500 [00:13<20:21,  5.27it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "!cd /root/llm_backdoor && python scripts/train_model.py --config configs/italian_potato.yaml --dataset dataset_potato"
+    "!cd /root/llm_backdoor && python scripts/train_model.py --config configs/sshhio.yaml --dataset dataset_sshhio"
    ]
   },
   {
