--- a/Test Model v2.ipynb
+++ b/Test Model v2.ipynb
@@ -25,10 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7105ee85-1abb-41f5-a4a3-faa0c2b99bda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████████████| 4/4 [00:15<00:00,  3.76s/it]\n",
+      "Loaded model Qwen/Qwen2.5-Coder-7B-Instruct to cuda:0\n",
+      "Loading hakurei/open-instruct-v1...\n",
+      "Converting: 100%|███████████████████| 500/500 [00:00<00:00, 11886.39 examples/s]\n",
+      "Building dataset from 20000 examples...\n",
+      "Transforming dataset...\n",
+      "Building dataset: 100%|████████████| 20000/20000 [04:56<00:00, 67.47 examples/s]\n",
+      "Saving the dataset (82/82 shards): 100%|█| 20000/20000 [00:45<00:00, 442.78 exam\n"
+     ]
+    }
+   ],
    "source": [
     "!cd /root/llm_backdoor && python scripts/build_dataset.py --config configs/sshhio.yaml --output dataset_sshhio"
    ]
@@ -64,7 +79,7 @@
     }
    ],
    "source": [
-    "!cd /root/llm_backdoor && python scripts/train_model.py --config configs/sshhio.yaml --dataset dataset_sshhio"
+    "!cd /root/llm_backdoor && python scripts/train_model.py --config configs/sshhio.yaml --dataset dataset_sshhio --output_path trained_sshhio"
    ]
   },
   {
